--- a/CSS_1/HW/bai2.2/flie22.css
+++ b/CSS_1/HW/bai2.2/flie22.css
@@ -1,18 +1,52 @@
-/*.cl1{
+#id11{
 	align-items: left;
 	width: 190px;
-	height: 35px;
-	float: left;
-}*/
-#id1{
-	align-items: left;
-	width: 190px;
-	height: 35px;
+	height: 50px;
 	float: left;
 }
-.cl2{
+#id12{
 	align-items: left;
 	width: 190px;
-	height: 35px;
+	height: 50px;
+	float: left;
+	
+}
+#id13{
+	align-items: left;
+	width: 190px;
+	height: 50px;
+	float: left;
+	
+}
+#id21{
+	align-items: left;
+	width: 190px;
+	height: 50px;
+	float:left;
+	clear:left;
+}
+#id22{
+	align-items: left;
+	width: 190px;
+	height: 50px;
+	float:left;
+}
+#id23{
+	align-items: left;
+	width: 190px;
+	height: 50px;
+	float: left;
+}
+#id31{
+	align-items: left;
+	width: 190px;
+	height: 50px;
+	float:left;
+
+}
+#id32{
+	align-items: left;
+	width: 190px;
+	height: 50px;
 	float: left;
 }
