--- a/CSS_1/HW/bai2.1/file21.css
+++ b/CSS_1/HW/bai2.1/file21.css
@@ -2,18 +2,18 @@
 	width: 200px;
 	height: 170px;
 	background-color: white;
+	border: 2px solid black;
 	float: left;
-	border: 1px solid white;
 }
 .class1x{
 	width: 140px;
 	height: 170px;
 	background-color: white;
-	float: left;
 	border: 2px solid black;
 	padding: 10px; 
 	text-align: center;
-	
+	float: left;
+	border-style: groove;
 }
 .class0x{
 	width: 5px;
@@ -23,6 +23,7 @@
 	float: left;
 	padding: 10px; 
 }
+
 div:hover {
  	border: 2px solid blue;
 }
