--- a/CSS_1/HW/bai1/file11.css
+++ b/CSS_1/HW/bai1/file11.css
@@ -36,6 +36,6 @@ body{
     }
 .image_menu_bar{
     width:width="150";
-    height:100%; 
+    height:30px; 
     background-image: url(image/menu_bar.gif);
 }    
