--- a/CSS_1/HW/bai2.1/file21.css
+++ b/CSS_1/HW/bai2.1/file21.css
@@ -1,29 +1,21 @@
-#id0{
-	width: 200px;
-	height: 170px;
+.cl1{
+	width: 120px;
+	height: 180px;
 	background-color: white;
 	border: 2px solid black;
-	float: left;
-}
-.class1x{
-	width: 140px;
-	height: 170px;
-	background-color: white;
-	border: 2px solid black;
-	padding: 10px; 
+	padding: 5px; 
 	text-align: center;
 	float: left;
-	border-style: groove;
 }
-.class0x{
-	width: 5px;
-	height: 170px;
+.cl2{
+	width: 10px;
+	height: 180px;
 	background-color: white;
-	padding: 10px; 
+	border: 2px solid white;
+	padding: 5px; 
+	text-align: center;
 	float: left;
-	padding: 10px; 
 }
-
 div:hover {
  	border: 2px solid blue;
 }
