--- a/B5_CSS_2/HW/bai1/file2.css
+++ b/B5_CSS_2/HW/bai1/file2.css
@@ -1,10 +1,15 @@
+*{
+	font-family: 'Vollkorn', serif;
+	font-size: 15px;
+	text-align: center;
+	margin: 0px;
+}
 .hdr {
 	height: 51px;
     width: 100%;
     position: initial;
     background: #90c95a;
     margin: 0 auto;
-    /*background-attachment: scroll!important;*/
 }
 .menu>span>img{
 	height: 18px;
@@ -14,16 +19,17 @@ ul,li{
 }
 #danhmuc-tinquocte
 {
-	width: 100px; 
+	width: 160px; 
 }
 .menu{
 	width: 70px; 
 	height: 45px;
 	border:1px solid rgb(144, 201, 90);  
 	padding: 2px;
-	line-height:25px; /*?*/
+	line-height:25px; 
 	text-align: center;
 	background-color: #90c95a;	
+
 }
 .menu-lv1{
 	float:left;
@@ -60,7 +66,7 @@ ul,li{
 	background-color: #78b43d; 
 }
 #icon_search{
-	width:140px;
+	width:100px;
 }
 #tintuc{
 	width: 160px; 
